dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: nginx-ingress
namespace: demo
spec:
ingressClassName: nginx
rules:
-host: nginx.tanlay.com
    http:
      paths:
      -backend:
          service:
            name: myapp-service
            port:
              number: 80
        path: /
        pathType: Prefix
